# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  18 Mar 2002; Geert Bevin <gbevin@gentoo.org>: libsandbox.c: All paths are now
  checked for multiple slashes anywhere in the path, this closes bug 827
  
  14 Mar 2002; Daniel Robbins <drobbins@gentoo.org>: output.py: quick fix to
  turn off white color output -- not good for terminals with white background.
  This closes bug #1135.
  
  11 Mar 2002; Daniel Robbins <drobbins@gentoo.org>: Applied karltk's version
  information patch.  Portage.py now contains version information, and this
  info is reported by "emerge --version".  Thanks Karl! :)
 
*portage-1.8.9_pre25 (11 Mar 2002)
 
  10 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: roll
  back portagetree incremental db optimizations to fix an important bug (no
  package.mask calculations being done.)  Emerge will now abort if a dependency
  can't be satisfied rather than printing just a warning.

*portage-1.8.9_pre24 (09 Mar 2002)

  09 Mar 2002; Daniel Robbins <drobbins@gentoo.org> emerge: fixed missing
  "--clean" option so "--clean rsync" should work again.  Also converted emerge
  to work with our new db layout (db objects are in the portage module now).

  09 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: Added USE
  ordering, a concept envisioned by Vitaly Kushneriuk.  The idea is to allow
  customization of how Portage resolves USE variables.  The default is
  "env:conf:auto:defaults" (set in the USE_ORDER variable -- this default is
  now in make.globals but as always you should set your custom USE_ORDER in
  make.conf if desired.)  So, my default, USE settings will be calculated as
  follows.  The USE variables will be grabbed from the
  /etc/make.profile/make.defaults file (this is "defaults".) Then, the
  /etc/make.profile/use.defaults file will be consulted.  This file lists (one